# limem-agent-plugin

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh
.learnings/: ERRORS.md  LEARNINGS.md
docs/: prd-unobtrusive-memory.md
limem-cli/: README.md  pyproject.toml
limem-cli/limem/: __init__.py  bootstrap.py  cli.py  client.py  config.py  daemon_client.py  doctor.py  entity_index.py  exporter.py  hooks.py  identity.py  injector.py  installer.py  mcp_server.py  memory_writer.py  migrate.py  notify.py  pattern_index.py  principals.py  redact.py  scope.py  session_mute.py  statusline.py  tag_text.py
limem-cli/limem/daemon/: __init__.py  auto_init.py  connectivity.py  eventbus.py  jaccard.py  learner.py  lock.py  ngram.py  rpc.py  server.py  state.py  writer.py
limem-cli/limem/dash/: __init__.py  app.py  keys.py
limem-cli/tests/: test_bootstrap_user_session.py  test_buffer_no_drop_new.py  test_cli_hook_choices.py  test_client_task_recall.py  test_dash_render.py  test_deictic_normalize.py  test_doctor.py  test_entity_index_v3_rebuild.py  test_hooks_pattern_recall.py  test_hooks_pre_tool_use.py  test_idle_passive_learning.py  test_installer_codex_notify.py  test_is_correction_confidence.py  test_manifest_sync.py  test_notify_codex.py  test_pre_post_pairing.py  test_principal_alias_resolver.py  test_principal_register_observation_semantics.py  test_principals_ensure.py  test_recall_feedback.py  test_remember_no_entity_registration.py  test_run_learner_force.py  test_session_end_wakeup.py  test_smoke_imports.py
plugin-src/.claude-plugin/: plugin.json
(+15 files in other folders)
