[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "limem-cli"
version = "0.3.9"
description = "LiMem long-term memory bridge for Claude Code and Codex CLI (MCP server + hooks + installer). Principal-centric v3."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gaooooosh" }]
keywords = ["llm", "memory", "claude-code", "codex", "mcp", "limem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "httpx[socks]>=0.27,<1",
  "pydantic>=2.7,<3",
  "click>=8.1,<9",
  "rich>=13.7,<14",
  "tomli-w>=1.0,<2",
  "mcp>=1.0,<2",
]

[project.optional-dependencies]
zh = ["jieba>=0.42,<1"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
limem = "limem.cli:main"
limem-mcp = "limem.mcp_server:main"
limemd = "limem.daemon.server:run"
limem-statusline = "limem.statusline:main"

[tool.hatch.build.targets.wheel]
packages = ["limem"]

# 把仓库根的 plugin-src/skills/ 打到 wheel/sdist 内的 limem/skills/
# —— installer._bundled_skills_dir() 的第二候选 here.parent / "skills" 由此命中。
# 顶层 force-include 同时作用于 wheel 与 sdist，避免漏 sdist 场景。
[tool.hatch.build.force-include]
"../plugin-src/skills" = "limem/skills"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
